<resources>
    <string name="app_name">AndroidApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">user@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="fav">Favoritos</string>
    <string name="prom">Promociones</string>
    <string name="pedidos">Mis Pedidos</string>
    <string name="cerrar">Cerrar Sesión</string>

    <string name="saludo">Hola, Nombre! </string>
    <string name="mensaje">Encuentra tu antojo favorito</string>
    <string name="registro">Crea una cuenta</string>
    <string name="iniciosesion">Inicia sesión</string>
    <string name="cart">Carrito</string>
    <string name="rate">Califica</string>
    <string name="profile">Perfil</string>
    <string name="info">Información</string>
    <string name="settings">Configuración</string>
    <string name="help">Ayuda</string>
    <string name="antojos">Antojos</string>
    <string name="bebidas">Bebidas</string>
    <string name="sushi">Sushi</string>
    <string name="postres">Postres</string>
    <string name="pizza">Pizza</string>
    <string name="hint">Escriba su consulta aquí</string>
    <string name="recomendados">Recomendados para ti </string>
</resources>