<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.zuul.androidapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.zuul.androidapp.ui.gallery.GalleryFragment"
        android:label="@string/fav"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_pedido"
        android:name="com.zuul.androidapp.ui.slideshow.SlideshowFragment"
        android:label="@string/pedidos"
        tools:layout="@layout/fragment_slideshow" />
</navigation>